alterando nome das imagens novas e adicionando no código

--- a/Cadastro.html
+++ b/Cadastro.html
@@ -38,14 +38,14 @@
           <button type="submit" class="botao_login">Cadastrar</button>
 
           <p class="registro_login">
-            Já tem uma conta? <a href="login.html">Entrar</a>
+            Já tem uma conta? <a href="index.html">Entrar</a>
           </p>
         </form>
       </div>
 
       <!-- LADO DIREITO: IMAGEM -->
       <div class="imagem_area">
-        <img src="" alt="Imagem Educacional" class="imagem_fundo" />
+        <img src="imagens/Up_Cadastro.png" alt="Imagem Educacional" class="imagem_fundo" />
       </div>
     </div>
   </div>
