--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <button type="submit" class="botao_login">Entrar</button>
 
           <p class="registro_login">
-            Não tem uma conta? <a href="#">Cadastre-se</a>
+            Não tem uma conta? <a href="Cadastro.html">Cadastre-se</a>
           </p>
         </form>
       </div>
