--- a/Cadastro.html
+++ b/Cadastro.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cadastro</title>
+  <!-- CSS do Flatpickr -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<!-- Tema escuro base -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/themes/dark.css">
   <link rel="stylesheet" href="Cadastro.css" />
 </head>
 <body>
@@ -130,6 +134,21 @@
   </div>
 
   <!-- 🔹 SCRIPT -->
+   <!-- JS principal -->
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<!-- Tradução para português -->
+<script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/pt.js"></script>
+
+<script>
+  flatpickr("input[type='date']", {
+    dateFormat: "d/m/Y",
+    altInput: true,
+    altFormat: "d/m/Y",
+    locale: "pt", // <-- idioma português
+    allowInput: true,
+    position: "auto", // volta à posição automática (como o nativo)
+  });
+</script>
   <script>
     function mostrarAba(tipo) {
       const formAluno = document.getElementById("formAluno");
